# t7tp1

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/dto/: AstNode.h  Lexeme.h  Scope.h  Variable.h
src/enum/: TokenType.h  VariableType.h
src/parser/: AbstractSyntaxTreeBuilder.cpp  AbstractSyntaxTreeBuilder.h  Lexer.cpp  Lexer.h  LiteralParser.cpp  LiteralParser.h
src/reader/: FileInput.cpp  FileInput.h
src/runner/: ScopeInterpreter.cpp  ScopeInterpreter.h
src/runner/handler/: AbstractOperationHandler.cpp  AbstractOperationHandler.h  ArithmeticOperatorHandler.cpp  ArithmeticOperatorHandler.h  AssignmentHandler.cpp  AssignmentHandler.h  ComparisonOperatorHandler.cpp  ComparisonOperatorHandler.h  ForLoopHandler.cpp  ForLoopHandler.h  IdentifierHandler.cpp  IdentifierHandler.h  IfConditionHandler.cpp  IfConditionHandler.h  InputHandler.cpp  InputHandler.h  PrintOperationHandler.cpp  PrintOperationHandler.h  VariableDeclarationHandler.cpp  VariableDeclarationHandler.h
test/: AbstractSyntaxTreeBuilderTest.cpp  ApplicationTest.cpp  CMakeLists.txt  LexerTest.cpp  LiteralParserTest.cpp  ScopeInterpreterTest.cpp
test/scripts/: script01.sc  script02.sc  script03.sc  script04.sc  script05.sc
